--- a/XPENS/Style/homeStyle.css
+++ b/XPENS/Style/homeStyle.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 
 body, html {
     margin: 0;
@@ -5,53 +8,62 @@ body, html {
 
 .gridDiv {
     text-align: center;
-    background-color: aqua;
+    background-color: rgba(200, 231, 221, 0.87);
+    border: 2px solid black;
 }
 
 #ItemA {
     grid-area: main;
-    background-color: blue;
 }
 
 #ItemB {
-    grid-area: leftSidebar;
-    background-color: rebeccapurple;
+    grid-area: leftSide;
 }
 
 #ItemC {
-    grid-area: rightSidebar;
-    background-color: red;
+    grid-area: rightSide;
 }
 
 #ItemD {
     grid-area: footer;
-    background-color: orange;
+}
+
+#ItemE {
+    grid-area: subHead;
 }
 
 #app {
+    background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+#contentDiv {    
     display: grid;
     justify-content: center;
     margin: 0 auto;
-    width: 80vw;
-    height: 100%;
+    width: 70vw;
+    height: auto;
     grid-template-areas:     
-    "leftSidebar main main rightSidebar"
-    "leftSidebar main main rightSidebar"
-    "leftSidebar main main rightSidebar"
-    "footer footer footer footer";
+    "subHead subHead subHead"
+    "leftSide main rightSide"
+    "footer footer footer";
 
-    grid-template-columns: 200px 300px 300px 200px;
-    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-columns: 250px 1fr 250px;
+    grid-template-rows: 100px 500px 150px;
 }
 
 .nav {
     display: flex;
+    color: rgba(10, 31, 9, 0.849);
+    font-size: 20px;
     justify-content: center;
     align-items: center;
     margin: 0;
     width: 100%;
     border: none;
-    background: linear-gradient(180deg, rgb(154, 179, 216), rgb(34, 114, 160))
+    background: linear-gradient(180deg, rgb(44, 184, 142), rgba(7, 56, 48, 0.863))
 }
 
 .nav li {
@@ -61,4 +73,40 @@ body, html {
 
 .nav :last-child {
     border: none;
+}
+
+.dropdownBtn {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    width: 100px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10%;
+    background: linear-gradient(160deg, rgb(160, 205, 235), rgb(141, 141, 179));
+}
+
+@media screen and (max-width: 1650px) {
+    #contentDiv {
+        min-width: 1155px;
+    }
+}
+
+@media screen and (max-width: 1155px) {
+    #contentDiv {
+        min-width: 100vw;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #contentDiv {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 100px 150px 500px 150px;
+        grid-template-areas: 
+        'subHead    subHead'
+        'leftSide   rightSide' 
+        'main       main'
+        'footer     footer';
+    }
 }
