--- a/XPENS/Style/homeStyle.css
+++ b/XPENS/Style/homeStyle.css
@@ -6,40 +6,41 @@ body, html {
     margin: 0;
 }
 
-.gridDiv {
+.homeClass.GridDiv {
     text-align: center;
     background-color: rgba(200, 231, 221, 0.87);
     border: 2px solid black;
 }
 
-#ItemA {
+.homeClass#ItemA {
     grid-area: main;
 }
 
-#ItemB {
+.homeClass#ItemB {
     grid-area: leftSide;
 }
 
-#ItemC {
+.homeClass#ItemC {
     grid-area: rightSide;
 }
 
-#ItemD {
+.homeClass#ItemD {
     grid-area: footer;
 }
 
-#ItemE {
+.homeClass#ItemE {
     grid-area: subHead;
 }
 
-#app {
+.homeClass#HomeContainer {
+    width: 100vw;
     background-image: url('https://images.pexels.com/photos/531880/pexels-photo-531880.jpeg?cs=srgb&dl=pexels-pixabay-531880.jpg&fm=jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-#contentDiv {    
+.homeClass#ContentDiv {
     display: grid;
     justify-content: center;
     margin: 0 auto;
@@ -54,53 +55,20 @@ body, html {
     grid-template-rows: 100px 500px 150px;
 }
 
-.nav {
-    display: flex;
-    color: rgba(10, 31, 9, 0.849);
-    font-size: 20px;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    width: 100%;
-    border: none;
-    background: linear-gradient(180deg, rgb(44, 184, 142), rgba(7, 56, 48, 0.863))
-}
-
-.nav li {
-    border-right: 1px solid rgb(15, 20, 36);
-    margin: 0 2px;
-}
-
-.nav :last-child {
-    border: none;
-}
-
-.dropdownBtn {
-    display: none;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    width: 100px;
-    padding: 10px;
-    text-align: center;
-    border-radius: 10%;
-    background: linear-gradient(160deg, rgb(160, 205, 235), rgb(141, 141, 179));
-}
-
 @media screen and (max-width: 1650px) {
-    #contentDiv {
+    .homeClass#ContentDiv {
         min-width: 1155px;
     }
 }
 
 @media screen and (max-width: 1155px) {
-    #contentDiv {
+    .homeClass#ContentDiv {
         min-width: 100vw;
     }
 }
 
 @media screen and (max-width: 1000px) {
-    #contentDiv {
+    .homeClass#ContentDiv {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 100px 150px 500px 150px;
         grid-template-areas: 
