--- a/XPENS/index.css
+++ b/XPENS/index.css
@@ -1,44 +1,77 @@
-html,body { 
-    margin:0; 
-    padding:0; 
-    height: 100vh; 
-    width:100%; 
-    background-color:aliceblue;
-    font-family: "RM Neue",sans-serif;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: aliceblue;
+    font-family: "RM Neue", sans-serif;
 }
 
-header{
-    height:152px;
-    background-color:bisque;
-    position:sticky;
-    top:0px;
+/* ------- NAVBAR --------- */
+
+header {
+    height: 152px;
+    background-color: bisque;
+    position: sticky;
+    top: 0px;
     z-index: 1000;
 }
 
-.header-container{
-    display:flex;
+.header-container {
+    display: flex;
     flex-direction: row;
-    position:absolute;
-    top:0;
-    left:0;
-    height:150px;
-    width:100%;
-    background-color:#4538f3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 150px;
+    width: 100%;
+    background-color: #4538f3;
     justify-content: space-evenly;
     align-content: center;
 }
 
-.menu-item {
+/* ------- SIDEBAR --------- */
 
+aside {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    background-color: #9acfe3;
+    box-shadow: 4px 5px rgba(69, 8, 82, 0.345);
+    min-width: 150px;
+    padding: 20px;
+    width: 20%;
+    border: 4px solid rgba(69, 8, 82, 0.345);
+    border-radius: 10px;
+    margin-top: 48px;
+    gap: 10px;
+    height: fit-content;
+    transition: width 0.5s;
+}
+
+aside>.menu-item {
+    display: flex;
+    width: 100%;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid black;
+}
+/* ------- BUTTONS/MENU ITEMS  --------- */
+
+#nav-btn-1, #nav-btn-2, #nav-btn-4, #nav-btn-5 {
+    min-width: 160px;
+}
+.menu-item {
+    
     /* Lachlan-original   */
     display: flex;
     align-items: center;
     align-self: center;
     background-color: #5db2d2;
-    max-width: 150px;
+    max-width: 170px;
     justify-content: center;
     /* ------------------- */
-  
+    
     /* Modified button-22 */
     border-radius: 8px;
     border-style: none;
@@ -47,113 +80,147 @@ header{
     color: #fff;
     cursor: pointer;
     flex-shrink: 0;
-    
-    font-family: "RM Neue",sans-serif;
+
+    font-family: "RM Neue", sans-serif;
     font-size: 100%;
     line-height: 1.15;
     padding: 10px 21px;
     text-align: center;
-    transition: color .13s ease-in-out,background .13s ease-in-out,opacity .13s ease-in-out,box-shadow .13s ease-in-out;
-  }
-
-.header-container > .menu-item{
-    padding:20px;
+    transition: color .13s ease-in-out, background .13s ease-in-out, opacity .13s ease-in-out, box-shadow .13s ease-in-out;
 }
 
-.logo{
-    display:flex;
+.menu-item:hover {
+  background-color: #1C84FF;
+}
+.header-container>.menu-item {
+    padding: 20px;
+}
+
+.logo {
+    display: flex;
     width: 150px;
 }
 
-main{
-    display:flex;
-    flex-direction: row;
-    min-height:calc(100% - 270px);
-    justify-content: space-around;
-    background-color: #9acfe3;
+ /* What is dis? */
+
+@media screen and (max-width:416px) {
+
+    .header-container {
+        display: flex;
+        flex-direction: row;
+        height: 100px;
+        background-color: lightgreen;
+        padding: 0px;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .menu-item {
+        display: flex;
+        flex-grow: 1;
+        background-color: violet;
+        align-self: center;
+    }
+
+    .logo {
+        display: flex;
+        background-color: aquamarine;
+    }
 }
 
-.main-container{
-    position: relative;
-    display:flex;
-    flex-direction: row;
-    margin-top: 10px;
-}
+/* End of what is dis */
 
-#app{
+/* ------- MAIN CONTAINER --------- */
+
+#app {
     display: flex;
     height: 500px;
     width: 600px;
     margin-top: 5px;
 }
 
-aside{
-    display:flex;
-    justify-content:flex-start;
-    flex-direction: column;
-    background-color:aliceblue;
-    min-width:150px;
-    padding:20px;
-    width:20%;
-    border:1px solid black;
-    border-radius: 10px;
-    margin-top:48px;
-    gap:10px;
-    height:fit-content;
-    transition: width 0.5s;
+main {
+    display: flex;
+    flex-direction: row;
+    min-height: calc(100% - 270px);
+    justify-content: space-around;
+    background-color: #9acfe3;
 }
 
-aside > .menu-item{
-    display:flex;
-    width:100%;
-    padding:20px 0 20px 0;
-    border-bottom: 1px solid black;
+.main-container {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
 }
 
+.greeting-container {
+    margin: 90px;
+    width: 50%;
+    padding: 10px;
+    text-align: right;
 
-footer{
-    display:flex;
-    background-color: lightyellow;
-    height:150px;
-}
-
-
-.footer-container{
-    display:flex;
-    flex-direction:column;
-    flex-grow:1;
-    padding-top:25px;
-    padding-left:25px;
-    padding-right:25px;
-    margin-bottom:25px;
-}
-
-.footer-item{
-    display:flex;
-    justify-content:center;
-}
-
-
-@media screen and (max-width:416px){
-        
-    .header-container{
-        display:flex;
-        flex-direction: row;
-        height:100px;
-        background-color:lightgreen;
-        padding:0px;
-        justify-content: center;
-        align-content: center;
-    }
-    .menu-item{
-        display:flex;
-        flex-grow:1;
-        background-color:violet;
-        align-self: center;
-    }
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
     
-    .logo{
-        display:flex;
-        background-color:aquamarine;
+}
+
+/* ------- WELCOME CSS ANIMATION --------- */
+
+.greeting {
+    margin: auto;
+    font-weight: 600;
+    font-size: 70px;
+    line-height: 65px;
+    
+    text-align: center;
+    text-transform: uppercase;
+    color: transparent;
+    -webkit-background-clip:
+text;
+        background-clip: text;
+    background-size: 400%;
+    animation: move 5s ease infinite;
+    background-image: linear-gradient(68.7deg, rgba(29, 173, 235, 1) 13.2%, rgba(137, 149, 250, 1) 29.8%, rgba(229, 109, 212, 1) 48.9%, rgba(255, 68, 128, 1) 68.2%, rgba(255, 94, 0, 1) 86.4%);
+}
+
+@keyframes move {
+
+    0%,
+    100% {
+        background-position: 200% 0%;
+    }
+
+    50% {
+        background-position: 0% 200%;
     }
 }
+
+
+
+/* ------- FOOTER  --------- */
+
+footer {
+    display: flex;
+    background-color: lightyellow;
+    height: 150px;
+}
+
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    padding-top: 25px;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-bottom: 25px;
+}
+
+.footer-item {
+    display: flex;
+    justify-content: center;
+}
+
