--- a/XPENS/index.css
+++ b/XPENS/index.css
@@ -34,8 +34,10 @@ header {
 /* ------- SIDEBAR --------- */
 
 aside {
+    position:absolute;
     display: flex;
-    justify-content: flex-start;
+    justify-content: right;
+    right: 0px;
     flex-direction: column;
     background-color: #9acfe3;
     box-shadow: 4px 5px rgba(69, 8, 82, 0.345);
@@ -133,11 +135,17 @@ aside>.menu-item {
 /* ------- MAIN CONTAINER --------- */
 
 #app {
+    position: relative;
     display: flex;
     height: 500px;
     width: 600px;
     margin-top: 5px;
 }
+
+#menu {
+    color:
+}
+
 
 main {
     display: flex;
