--- a/XPENS/savingPlan.css
+++ b/XPENS/savingPlan.css
@@ -1,4 +1,4 @@
-.container.saving {
+/* .container.saving {
     grid-template-rows: 1fr;
     grid-template-columns: 10rem 10rem;
     margin-left: 90px;
@@ -19,4 +19,4 @@
     background-color: lightblue;
     border-radius: 10px;
     cursor: pointer;
-}
+} */
